--- a/Taeho-iOS/Base.lproj/Main.storyboard
+++ b/Taeho-iOS/Base.lproj/Main.storyboard
@@ -64,14 +64,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rTl-Un-fFt" userLabel="Email Text">
-                                <rect key="frame" x="47" y="188" width="280" height="30"/>
+                                <rect key="frame" x="31" y="186" width="312" height="30"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uac-d2-QES" userLabel="Password Text">
-                                <rect key="frame" x="47" y="237" width="280" height="30"/>
+                                <rect key="frame" x="31" y="235" width="312" height="30"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -100,6 +100,11 @@
                                 <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2vN-fj-7kv" customClass="GIDSignInButton">
+                                <rect key="frame" x="31" y="362" width="312" height="48"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Sign in with Google"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Vw4-od-YQ2"/>
@@ -108,6 +113,7 @@
                     <connections>
                         <outlet property="emailText" destination="rTl-Un-fFt" id="WyT-gA-aLY"/>
                         <outlet property="errorMessagesLabel" destination="9Kt-Wt-9J1" id="RDB-gW-hrH"/>
+                        <outlet property="googleSignInButton" destination="2vN-fj-7kv" id="TSV-3d-mcb"/>
                         <outlet property="logInButton" destination="djS-DJ-Yuc" id="PwD-kz-V54"/>
                         <outlet property="passwordText" destination="uac-d2-QES" id="ApU-6k-UZI"/>
                         <segue destination="Oh4-Gd-ziE" kind="show" identifier="SegueLogInToRoot" id="xHd-42-YR4"/>
@@ -115,7 +121,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="thX-zn-Gf8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-410.39999999999998" y="133.5832083958021"/>
+            <point key="canvasLocation" x="-410.39999999999998" y="133.00492610837438"/>
         </scene>
         <!--Sign Up View Controller-->
         <scene sceneID="dvp-hw-313">
