Refactor grpc clients

--- a/Taeho-iOS/Base.lproj/Main.storyboard
+++ b/Taeho-iOS/Base.lproj/Main.storyboard
@@ -10,34 +10,27 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
-        <scene sceneID="fUn-nI-BXt">
+        <!--Notes-->
+        <scene sceneID="shU-Ia-saF">
             <objects>
-                <tableViewController id="rCr-x0-t0m" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="1dO-Eq-k41">
+                <viewController storyboardIdentifier="NotesViewController" id="vel-31-hZP" customClass="NotesViewController" customModule="Taeho_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XSl-Sy-VYh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="akw-CM-brt">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="akw-CM-brt" id="nUB-xn-5ZA">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666666666666664"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="rCr-x0-t0m" id="dx3-1Y-yFr"/>
-                            <outlet property="delegate" destination="rCr-x0-t0m" id="Qs5-hW-3Ab"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="XFw-KN-BjY"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="hgT-9m-wKC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <viewLayoutGuide key="safeArea" id="IP1-8j-jGe"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Notes" id="8Rk-cD-von">
+                        <barButtonItem key="rightBarButtonItem" title="Sign Out" id="5ES-Ud-mJE">
+                            <connections>
+                                <action selector="signOutButtonPressed:" destination="vel-31-hZP" id="DyO-cL-XZF"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rQd-9O-dkq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1442" y="134"/>
+            <point key="canvasLocation" x="1385" y="134"/>
         </scene>
         <!--Root Navigation Controller-->
         <scene sceneID="Eq9-75-Rz9">
@@ -48,7 +41,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="rCr-x0-t0m" kind="relationship" relationship="rootViewController" id="8D3-tZ-QZl"/>
+                        <segue destination="vel-31-hZP" kind="relationship" relationship="rootViewController" id="H6R-8B-W9n"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iGg-kE-cw3" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -93,18 +86,18 @@
                                     <action selector="logInButtonPressed:" destination="aiF-ur-0lL" eventType="touchUpInside" id="PRc-JI-bx3"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Kt-Wt-9J1" userLabel="ErrorMessages">
-                                <rect key="frame" x="47" y="330" width="280" height="24"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2vN-fj-7kv" customClass="GIDSignInButton">
                                 <rect key="frame" x="31" y="362" width="312" height="48"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Sign in with Google"/>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9Kt-Wt-9J1" userLabel="ErrorMessages">
+                                <rect key="frame" x="47" y="435" width="280" height="24"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="Vw4-od-YQ2"/>
