--- a/Taeho-iOS/Base.lproj/LaunchScreen.storyboard
+++ b/Taeho-iOS/Base.lproj/LaunchScreen.storyboard
@@ -26,7 +26,7 @@
             </objects>
             <point key="canvasLocation" x="-673" y="375"/>
         </scene>
-        <!--Taeho-->
+        <!--View Controller-->
         <scene sceneID="EHf-IW-A2E">
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
@@ -36,7 +36,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Taeho" id="Fz1-JP-xyH"/>
+                    <navigationItem key="navigationItem" id="Fz1-JP-xyH"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
