--- a/Taeho-iOS/Base.lproj/Main.storyboard
+++ b/Taeho-iOS/Base.lproj/Main.storyboard
@@ -68,11 +68,22 @@
                     <view key="view" contentMode="scaleToFill" id="8Lb-vi-6wo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MHe-Wt-poJ">
+                                <rect key="frame" x="157" y="677" width="60" height="30"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <state key="normal" title="Sign Out"/>
+                                <connections>
+                                    <action selector="signOutPressed:" destination="uaW-DI-w1r" eventType="touchUpInside" id="Dbu-dn-26p"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="TU6-rv-mQU"/>
                     </view>
                     <navigationItem key="navigationItem" id="KfN-fs-6Dr"/>
                     <connections>
+                        <outlet property="signOutButton" destination="MHe-Wt-poJ" id="ABY-bB-cYR"/>
                         <segue destination="BuM-cL-DbU" kind="show" identifier="SegueLaunchToSignIn" animates="NO" id="PZp-0z-cvq"/>
                     </connections>
                 </viewController>
@@ -105,7 +116,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ze-Y3-LJr">
-                                <rect key="frame" x="31" y="315" width="312" height="48"/>
+                                <rect key="frame" x="31" y="308" width="312" height="48"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Sign Up with Email"/>
                                 <connections>
@@ -127,7 +138,6 @@
         <!--Log In View Controller-->
         <scene sceneID="JRc-8J-qeF">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="thX-zn-Gf8" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="SignInWithEmailViewController" title="Sign In with Email" id="aiF-ur-0lL" userLabel="Log In View Controller" customClass="SignInWithEmailViewController" customModule="Taeho_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KGn-Xs-CEK">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
@@ -172,6 +182,7 @@
                         <outlet property="passwordText" destination="uac-d2-QES" id="R3M-Jx-3yG"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="thX-zn-Gf8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-276" y="134"/>
         </scene>
